--- a/requirements_minimal.txt
+++ b/requirements_minimal.txt
@@ -5,6 +5,8 @@ julius>=0.2.3
 lameenc>=1.2
 openunmix
 pyyaml
-torch>=2.8.0
-torchaudio>=0.8,<=2.8
+# torch>=2.8.0
+# torchaudio>=0.8,<=2.8
+torch==2.8.0
+torchaudio==2.8.0
 tqdm
